feat: block registry (with JSON configurable blocks)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glad REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
 
 add_executable(icp-fuckfest ${SOURCES})
 
@@ -21,4 +22,5 @@ target_link_libraries(icp-fuckfest PRIVATE
     glfw              
     glm::glm          
     imgui::imgui
+    nlohmann_json::nlohmann_json
 )
