--- a/imgui.ini
+++ b/imgui.ini
@@ -15,3 +15,11 @@ Size=353,714
 Pos=60,60
 Size=203,138
 
+[Window][Debug Overlay]
+Pos=60,60
+Size=191,266
+
+[Window][Controls]
+Pos=271,15
+Size=318,99
+
