--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(imgui CONFIG REQUIRED)
 find_package(imguizmo CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(Stb REQUIRED)
+find_package(nfd CONFIG REQUIRED)
 
 add_executable(scuffcraft ${SOURCES})
 
@@ -27,4 +28,5 @@ target_link_libraries(scuffcraft PRIVATE
     imgui::imgui
     imguizmo::imguizmo
     nlohmann_json::nlohmann_json
+    nfd::nfd
 )
