--- a/imgui.ini
+++ b/imgui.ini
@@ -16,10 +16,14 @@ Pos=60,60
 Size=203,138
 
 [Window][Debug Overlay]
-Pos=58,58
-Size=184,289
+Pos=23,179
+Size=191,340
 
 [Window][Controls]
-Pos=271,15
+Pos=288,15
 Size=318,99
+
+[Window][Audio controls]
+Pos=22,621
+Size=357,77
 
