feat: proper time system

--- a/imgui.ini
+++ b/imgui.ini
@@ -17,7 +17,7 @@ Size=203,138
 
 [Window][Debug Overlay]
 Pos=23,179
-Size=191,340
+Size=198,340
 
 [Window][Controls]
 Pos=288,15
@@ -26,4 +26,8 @@ Size=318,99
 [Window][Audio controls]
 Pos=22,621
 Size=357,77
+
+[Window][Timer controls]
+Pos=60,60
+Size=200,105
 
